# FlashRingBuffer

./: CMakeLists.txt  build.sh
src/core/: flashlog.c  flashlog.h
src/flashlog/: flashlog.c  flashlog.h
src/hal/: flash_hal.h
src/include/: errors.h  globals.h
src/include/crc/: crc.c  crc.h
src/include/debug/: debug.h
src/include/utils/: utils.c  utils.h
src/pc_sim/: sim.c  sim.h
src/real/: interface.c
src/tests/: test_basic.c
